Add CLI args for host/port
Signed-off-by: Walker Crouse <walker.crouse@coop.co.uk>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2018"
 [dependencies]
 clipboard = "0.5.0"
 tokio = { version = "0.2.22", features = ["full"] }
+clap = { version = "3.0.0-beta.1", features = ["derive"] }
 avahi-sys = { git = "https://github.com/windy1/avahi-sys" }
 libc = "*"
