--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2018"
 [dependencies]
 clipboard = "0.5.0"
 tokio = { version = "0.2.22", features = ["full"] }
+# derive-new = "0.5.8"
+derive_builder = "0.9.0"
 avahi-sys = { git = "https://github.com/windy1/avahi-sys" }
 libc = "*"
