--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ clipboard = "0.5.0"
 tokio = { version = "0.2.22", features = ["full"] }
 # derive-new = "0.5.8"
 derive_builder = "0.9.0"
+core-foundation = "0.9.0"
 avahi-sys = { git = "https://github.com/windy1/avahi-sys" }
 libc = "*"
