--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ pre-commit = "0.5.2"
 [target.'cfg(unix)'.dependencies]
 avahi-sys = { git = "https://github.com/windy1/avahi-sys" }
 
-[target.'cfg(macos)'.dependencies]
+[target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.9.0"
 
 [package.metadata.precommit]
