--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ pre-commit = "0.5.2"
 avahi-sys = { git = "https://github.com/windy1/avahi-sys" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-core-foundation = "0.9.0"
+bonjour-sys = { git = "https://github.com/windy1/bonjour-sys" }
 
 [package.metadata.precommit]
 fmt = "cargo fmt"
