--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ clipboard = "0.5.0"
 tokio = { version = "0.2.22", features = ["full"] }
 derive-new = "0.5.8"
 derive_builder = "0.9.0"
-getset = "0.1.1"
+# getset = "0.1.1"
+derive-getters = "0.2.0"
 pre-commit = "0.5.2"
 
 [target.'cfg(unix)'.dependencies]
