--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 libc = "*"
 clipboard = "0.5.0"
 tokio = { version = "0.2.22", features = ["full"] }
-derive-new = "0.5.8"
+# derive-new = "0.5.8"
 derive_builder = "0.9.0"
 # getset = "0.1.1"
 derive-getters = "0.2.0"
