--- a/magiclip/Cargo.toml
+++ b/magiclip/Cargo.toml
@@ -13,6 +13,8 @@ derive_builder = "0.9.0"
 derive-getters = "0.2.0"
 pre-commit = "0.5.2"
 magiclip-macros = { path = "../magiclip-macros" }
+log = "0.4.11"
+env_logger = "0.7.1"
 
 [target.'cfg(unix)'.dependencies]
 avahi-sys = { path = "../../avahi-sys" }
