--- a/zeroconf/Cargo.toml
+++ b/zeroconf/Cargo.toml
@@ -11,7 +11,7 @@ serde = { version = "1.0.116", features = ["derive"] }
 derive-getters = "0.2.0"
 libc = "*"
 derive_builder = "0.9.0"
-magiclip-macros = { path = "../magiclip-macros" }
+zeroconf-macros = { path = "../zeroconf-macros" }
 log = "0.4.11"
 
 [target.'cfg(unix)'.dependencies]
