--- a/magiclip/Cargo.toml
+++ b/magiclip/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Walker Crouse <walker.crouse@coop.co.uk>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+derive-new = "0.5.8"
+tokio = { version = "0.2.22", features = ["full"] }
+zeroconf = { path = "../zeroconf" }
+serde = { version = "1.0.116", features = ["derive"] }
+serde_json = "1.0.57"
+anyhow = "1.0.32"
