--- a/magiclip/Cargo.toml
+++ b/magiclip/Cargo.toml
@@ -11,3 +11,4 @@ zeroconf = { path = "../zeroconf" }
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.57"
 anyhow = "1.0.32"
+colored = "2.0.0" 
