--- a/magiclip/Cargo.toml
+++ b/magiclip/Cargo.toml
@@ -11,4 +11,6 @@ zeroconf = { path = "../zeroconf" }
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.57"
 anyhow = "1.0.32"
-colored = "2.0.0" 
+colored = "2.0.0"
+dialoguer = "0.6.2"
+console = "0.11.2"
