--- a/magiclip/Cargo.toml
+++ b/magiclip/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Walker Crouse <walker.crouse@coop.co.uk>"]
 edition = "2018"
 
 [dependencies]
+clipboard = "0.5.0"
 derive-new = "0.5.8"
 tokio = { version = "0.2.22", features = ["full"] }
 zeroconf = { path = "../zeroconf" }
