--- a/magiclip/Cargo.toml
+++ b/magiclip/Cargo.toml
@@ -5,13 +5,12 @@ authors = ["Walker Crouse <walker.crouse@coop.co.uk>"]
 edition = "2018"
 
 [dependencies]
-clipboard = "0.5.0"
-derive-new = "0.5.8"
 tokio = { version = "0.2.22", features = ["full"] }
-zeroconf = { path = "../zeroconf" }
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.57"
 anyhow = "1.0.32"
 colored = "2.0.0"
 dialoguer = "0.6.2"
 console = "0.11.2"
+zeroconf = { path = "../zeroconf" }
+magiclip-dtos = { path = "../magiclip-dtos" }
