--- a/magiclipd/Cargo.toml
+++ b/magiclipd/Cargo.toml
@@ -13,8 +13,10 @@ log = "0.4.11"
 env_logger = "0.7.1"
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.57"
-zeroconf = { path = "../zeroconf" }
 derive-getters = "0.2.0"
+anyhow = "1.0.32"
+zeroconf = { path = "../zeroconf" }
+magiclip-dtos = { path = "../magiclip-dtos" }
 
 [package.metadata.precommit]
 fmt = "cargo fmt"
