--- a/magiclipd/Cargo.toml
+++ b/magiclipd/Cargo.toml
@@ -8,14 +8,13 @@ edition = "2018"
 clipboard = "0.5.0"
 tokio = { version = "0.2.22", features = ["full"] }
 derive-new = "0.5.8"
-pre-commit = "0.5.2"
 log = "0.4.11"
 env_logger = "0.7.1"
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.57"
 derive-getters = "0.2.0"
 anyhow = "1.0.32"
-zeroconf = { path = "../zeroconf" }
+zeroconf = "0.1.0-beta"
 magiclip-dtos = { path = "../magiclip-dtos" }
 
 [package.metadata.precommit]
