--- a/magiclip-dtos/Cargo.toml
+++ b/magiclip-dtos/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.57"
+derive-new = "0.5.8"
+derive-getters = "0.2.0"
