--- a/magiclip/Cargo.toml
+++ b/magiclip/Cargo.toml
@@ -12,5 +12,7 @@ anyhow = "1.0.32"
 colored = "2.0.0"
 dialoguer = "0.6.2"
 console = "0.11.2"
+log = "0.4.11"
+env_logger = "0.7.1"
 zeroconf = { path = "../../zeroconf-rs/zeroconf", version = "0.6.2" }
 magiclip-dtos = { path = "../magiclip-dtos" }
