fix mac install script
Signed-off-by: Walker Crouse <Walker.Crouse@coop.co.uk>

--- a/magiclipd/magiclipd.plist
+++ b/magiclipd/magiclipd.plist
@@ -3,10 +3,10 @@
 <plist version="1.0">
 <dict>
     <key>Label</key>
-    <string>$HOME/.cargo/bin/magiclipd</string>
+    <string>magiclipd</string>
     <key>ProgramArguments</key>
     <array>
-        <string>$HOME/.cargo/bin/magiclipd</string>
+        <string>/usr/local/bin/magiclipd</string>
     </array>
     <key>KeepAlive</key>
     <true/>
