--- a/magiclipd/magiclipd.service
+++ b/magiclipd/magiclipd.service
@@ -7,9 +7,8 @@ StartLimitIntervalSec=0
 Type=simple
 Restart=always
 RestartSec=1
-User=%u
 Environment=RUST_LOG=debug
-ExecStart=/usr/bin/magiclipd
+ExecStart=/usr/bin/env /usr/bin/magiclipd
 
 [Install]
 WantedBy=multi-user.target
