--- a/magiclip/Cargo.toml
+++ b/magiclip/Cargo.toml
@@ -16,3 +16,5 @@ log = "0.4.11"
 env_logger = "0.7.1"
 zeroconf = { path = "../../zeroconf-rs/zeroconf", version = "0.6.2" }
 magiclip-dtos = { path = "../magiclip-dtos" }
+clap = "3.0.0-beta.2"
+clipboard = "0.5.0"
